finished less/css and html portion, began working on js portion.

--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway">
 </head>
 <body>
     <header>
      <nav>
-         Home
-         About 
-         Contact
+         <a href = "#">Home</a>
+         <span> | </span>
+         <a href = "#">About </a>
+         <span> | </span>
+         <a href = "#">Contact</a>
      </nav>    
     </header>
     <section class="title-container">
        
-               50 Influential Artists
-               Contact Us
+               <h1>50 Influential Artists</h1>
+               <div class = "contactButton">Contact Us</div>
           
         <hr>
     </section>
